# OpenPeripherals

./: Cargo.toml  LICENSE  README.md
App/: Cargo.toml
App/html_preview/: addons.html  ai_learning.html  devices.html  profiles.html  script.js  settings.html  style.css
App/pages/: addons.html  ai_learning.html  base.html  devices.html  new_style.css  profiles.html  script.js  settings.html  style.css
App/pages/assets/css/: style.css
App/pages/assets/js/: script.js
App/pages/components/: sidebar.html
App/src/: icon.rs  main.rs
App/src/ui/: mod.rs  pages.rs
Core/: Cargo.toml
Core/pages/: addons.html  ai_learning.html  base.html  device_edit.html  devices.html
Core/pages/assets/css/: style.css
Core/pages/components/: sidebar.html
Core/src/: icon.rs  main.rs
Core/src/ui/: mod.rs  pages.rs
Development/: Cargo.toml
Development/src/: commands.rs  main.rs
Server/: Cargo.toml
Server/src/: db.rs  main.rs  models.rs  storage.rs
Server/src/handlers/: addons.rs  firmware.rs  mod.rs  updates.rs
addons/example-device/: addon.yaml  profile.yaml
crates/op-addon/: Cargo.toml
crates/op-addon/src/: lib.rs  loader.rs  manifest.rs  registry.rs
crates/op-ai/: Cargo.toml
crates/op-ai/src/: analyzer.rs  guide.rs  lib.rs  session.rs
crates/op-core/: Cargo.toml
crates/op-core/src/: installer.rs  lib.rs  logging.rs
crates/op-core/src/device/: capabilities.rs  info.rs  mod.rs  registry.rs  traits.rs
crates/op-core/src/firmware/: manager.rs  mod.rs  package.rs  protection.rs
crates/op-core/src/hid/: enumerate.rs  handle.rs  mod.rs
crates/op-core/src/profile/: format.rs  mod.rs  store.rs
crates/op-core/src/signal/: capture.rs  mod.rs  pattern.rs
crates/op-core/src/tablet/: bridge.rs  config.rs
crates/op-sdk/: Cargo.toml
crates/op-sdk/src/: lib.rs
