[package]
name = "op-dev"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OpenPeripheral developer CLI — build, validate, and publish addons and firmware"

[[bin]]
name = "op-dev"
path = "src/main.rs"

[dependencies]
# Core types (re-exported via SDK)
op-core = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Async / HTTP client
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["multipart", "json"] }

# Hashing
sha2 = "0.10"
hex = "0.4"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging
log = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Paths
dirs = { workspace = true }

# Archive / packaging
zip = { version = "2", default-features = false, features = ["deflate"] }
