[package]
name = "op-addon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Addon loading, registry, and manifest system for OpenPeripheral"

[dependencies]
op-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
libloading = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true }
