[package]
name = "op-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AI-guided signal reverse engineering for OpenPeripheral"

[dependencies]
op-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
