[package]
name = "op-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core device abstraction, HID communication, and profile management for OpenPeripheral"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
hidapi = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
